<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Om-Nom-Nom</string>
    <string name="welcome_tap">Tap to start</string>
    <string name="action_settings">Settings</string>
    <string name="loginText">Log in</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registrationButton">Registration</string>
    <string name="blank">You are successfully logged in</string>
</resources>
